Fix icon spacing

--- a/css/index.css
+++ b/css/index.css
@@ -162,9 +162,11 @@ p a {
 }
 
 .skills-icon-container {
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 700px;
 }
 
 .skills-icon-container a {
@@ -216,6 +218,5 @@ i {
         padding: 0 20px;
         font-size: 11px;
     }
-
 
 }
